--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,59 @@
-spring.application.name=ease2bill
-
+# ===============================
+# SERVER CONFIGURATION
+# ===============================
 server.port=8081
+
+# ===============================
+# DATABASE CONFIGURATION
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/ease2bill?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / HIBERNATE CONFIGURATION
+# ===============================
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# THYMELEAF CONFIGURATION
+# ===============================
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+
+# ===============================
+# SPRING SECURITY CONFIGURATION
+# ===============================
+spring.security.user.name=admin
+spring.security.user.password=admin123
+spring.security.user.roles=ADMIN
+
+# ===============================
+# LOGGING CONFIGURATION
+# ===============================
+logging.level.org.springframework.security=INFO
+logging.level.com.bsm.ease2bill=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===============================
+# FILE UPLOAD (if needed later)
+# ===============================
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# ===============================
+# APPLICATION INFO
+# ===============================
+app.name=Ease2Bill Pro
+app.version=1.0.0
+app.description=Spring Boot Billing System with QR Payments & Receipts
